--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -36,11 +36,11 @@
   </ngui-map>  -->
 
 
-  <ngui-map center="Brampton, Canada">
+  <ngui-map center="New York, United States">
     <marker *ngFor="let po of  positions" [position]="po" draggable="true" (click)="clicked($event)"></marker>
        <info-window  id="iw" > 
           <div *ngIf="marker.display">
-          lat: {{ marker.lat }}, lng: {{ marker.lng }} 
+          lat: {{ marker.lat }}, lng: {{ marker.lng }} addr: {{marker.fa}}
       </div>
       <button (click)="hideMarkerInfo()">Hide Info</button>
     </info-window> 
