map height  changed  to 900px

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
-{{title}}
-<app-map></app-map>
+<div class="container">
+    <div class="row">
+             <app-map></app-map>
+    </div>
+   
+</div>
