Revert "map height  changed  to 900px"
This reverts commit faac75e1ec529691de5a799864fce463756623c7.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,2 @@
-<div class="container">
-    <div class="row">
-             <app-map></app-map>
-    </div>
-   
-</div>
+{{title}}
+<app-map></app-map>
